# s2_op_lab8_task3

./: README.md  chess_compressed  grayscale_manipulator.py  log.txt  mountain_compressed  pyproject.toml  quality.py
